# black_star

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  codecov.yml  coverage.xml  game_character.py  game_dialog.py  game_items.py  game_menu.py  game_object.py  game_play.py  game_terminal.py  game_world.py  git_pull.sh  git_push.sh  go.mod  main.py  main2.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  test.py  tox.ini
.github/workflows/: build.yml  codeql-analysis.yml  flake8.yml  lint.yml  tests.yml
cmd/black_star/: main.go
htmlcov/: index.html  src_black_star___init___py.html  src_black_star_characters___init___py.html  src_black_star_characters_character_py.html  src_black_star_characters_dialog_py.html  src_black_star_conftest_py.html  src_black_star_main_py.html  src_black_star_test_setup_py.html  src_black_star_tests___init___py.html  src_black_star_tests_test_characters_py.html  src_black_star_tools___init___py.html  src_black_star_tools_menu_py.html  src_black_star_tools_terminal_py.html  src_black_star_world___init___py.html  src_black_star_world_items_py.html  src_black_star_world_maps_py.html  src_black_star_world_world_py.html  status.json
rpg_game/: black_star.py  game_character.py  game_dialog.py  game_items.py  game_menu.py  game_terminal.py  game_world.py  main.py  setup.py
rpg_game/game_characters/: game_character.py  game_dialog.py
rpg_game/game_world/: game_items.py  game_world.py
rpg_game/src/black_star.egg-info/: PKG-INFO  SOURCES.txt
rpg_game/src/rpg_game/game_mechanics/: game_menu.py  game_terminal.py
rpg_game/src/rpg_game/game_world/: game_items.py  game_world.py
src/: setup.py  test_flake8.py
src/black_star/: __init__.py  black_star.py  main.py  test_flake8.py
src/black_star/characters/: character.py  characters.py  dialog.py  enemies.py
src/black_star/tests/: test_characters.py  test_inventory.py  test_new_game.py
src/black_star/tools/: menu.py  terminal.py
src/black_star/world/: commands.py  items.py  maps.py  world.py
tests/: conftest.py  test_characters.py  test_inventory.py  test_items.py  test_new_game.py  test_world.py
tests/fixtures/: fake_objects.py
