[tool.poetry]
name = "black_star"
version = "0.6.0"
description = "Text-based role playing game"
authors = ["Ryan Butler <ryanleonbutler@gmail.com>"]
readme = "README.md"
license = "GNU Affero General Public License v3.0"
homepage = "https://github.com/ryanleonbutler/black_star"
repository = "https://github.com/ryanleonbutler/black_star"

[tool.poetry.dependencies]
python = ">=3.10"
rich = "*"

[tool.poetry.dev-dependencies]
ruff = "*"
coverage = "*"
pytest = "*"
pytest-cov = "*"
tox = "*"
pre-commit = "*"

[tool.poetry.scripts]
black_star = 'black_star.main:main'

[tool.poetry.group.dev.dependencies]
tox = "^4.12.0"
pytest-xdist = "^3.5.0"

[tool.tox]
legacy_tox_ini = """
[Tox]
isolated_build = true
skipsdist = true
envlist =
    py{310,11,12},
    flake8,
    tests

[testenv]
deps =
    poetry>=1.1.0
whitelist_external = poetry
skip_install = true
commands_pre = poetry install -vvv

[testenv:lint]
commands =
    poetry run ruff check src/black_star tests/

[testenv:tests]
commands =
    poetry run pytest -ra -v --cov=src/black_star --cov-report xml .
"""

[tool.ruff]
exclude = [".venv", "dist", "build"]
select = [
    "I"
]

[tool.ruff.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.coverage.report]
skip_empty = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
